[gd_scene load_steps=15 format=3 uid="uid://cwdt3de3pwtln"]

[ext_resource type="Script" path="res://Scenes/main_game.gd" id="1_rlnl7"]
[ext_resource type="PackedScene" uid="uid://e5x1aso3uw0c" path="res://Scenes/Map.tscn" id="2_eevlv"]
[ext_resource type="PackedScene" uid="uid://dc0yu32iay8ld" path="res://Scenes/enemy.tscn" id="3_o006m"]
[ext_resource type="PackedScene" uid="uid://cqya1qgay0lur" path="res://Scenes/Chicken.tscn" id="4_uc5v0"]
[ext_resource type="Script" path="res://Scenes/Health_bar.gd" id="4_wlvwr"]
[ext_resource type="Script" path="res://Scenes/cycle_announcement.gd" id="5_w6r8h"]
[ext_resource type="LabelSettings" uid="uid://bbm407nhinbqg" path="res://Scenes/LabelData/Pretty_Label.tres" id="6_bsppp"]
[ext_resource type="Shader" path="res://Scenes/Glitch.gdshader" id="7_7700c"]
[ext_resource type="LabelSettings" uid="uid://bv2est1hx2aj2" path="res://Scenes/LabelData/Bloody_Label.tres" id="8_no12r"]
[ext_resource type="PackedScene" uid="uid://bwbscfbgtifl4" path="res://Characters/Base_character.tscn" id="9_veard"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ccmx"]
size = Vector2(87, 41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dvggy"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="Theme" id="Theme_ilxjc"]
ProgressBar/styles/fill = SubResource("StyleBoxFlat_dvggy")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gnyru"]
shader = ExtResource("7_7700c")
shader_parameter/shake_power = 0.03
shader_parameter/shake_rate = 0.2
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[node name="Main game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_rlnl7")

[node name="Map" parent="." instance=ExtResource("2_eevlv")]
position = Vector2(109, 44)

[node name="ChickenArea" type="Area2D" parent="Map"]
position = Vector2(-160, 72)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/ChickenArea"]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_6ccmx")

[node name="Chicken" parent="Map/ChickenArea" instance=ExtResource("4_uc5v0")]
position = Vector2(-38, -14)

[node name="Chicken2" parent="Map/ChickenArea" instance=ExtResource("4_uc5v0")]
position = Vector2(38, -13)

[node name="Chicken3" parent="Map/ChickenArea" instance=ExtResource("4_uc5v0")]
position = Vector2(-38, 17)

[node name="Chicken4" parent="Map/ChickenArea" instance=ExtResource("4_uc5v0")]
position = Vector2(39, 17)

[node name="Enemy" parent="." instance=ExtResource("3_o006m")]
position = Vector2(369, 30)

[node name="Enemy2" parent="." instance=ExtResource("3_o006m")]
position = Vector2(348, 119)

[node name="Enemy3" parent="." instance=ExtResource("3_o006m")]
position = Vector2(292, 192)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.206
anchor_bottom = 0.025
offset_left = 6.0
offset_top = 7.0
offset_right = 6.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ilxjc")
show_percentage = false
script = ExtResource("4_wlvwr")

[node name="CycleAnnouncement" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_w6r8h")

[node name="Label2" type="Label" parent="CanvasLayer/Control/CycleAnnouncement"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.5
offset_top = -154.5
offset_right = 352.5
offset_bottom = 154.5
grow_horizontal = 2
grow_vertical = 2
text = "With the rising sun
Everything Changes
Day begins!"
label_settings = ExtResource("6_bsppp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Control/CycleAnnouncement"]
material = SubResource("ShaderMaterial_gnyru")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.5
offset_top = -154.5
offset_right = 239.5
offset_bottom = 154.5
grow_horizontal = 2
grow_vertical = 2
text = "With the setting sun
EVERYTHING CHANGES
Night begins!"
label_settings = ExtResource("8_no12r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(-86.979, 28.4822)

[node name="Timer" type="Timer" parent="."]

[node name="BaseCharacter" parent="." instance=ExtResource("9_veard")]
unique_name_in_owner = true
position = Vector2(-322, 99)
